# dev_shift-scheduling

./: .gitignore  CLAUDE.md  STATUS.md
.claude/: settings.json
.claude/agents/: architect.md  designer.md  documenter.md  orchestrator.md  planner.md  reviewer.md  tester.md  worker.md
.claude/commands/: develop.md  fix.md  improve.md  refactor.md
backend/: .env.example  Dockerfile  pyproject.toml  seed_demo.py
backend/backend/: database.py  domain.py  main.py  models.py  schemas.py
backend/backend/api/: requests.py  role_staffing_requirements.py  schedules.py  shift_slots.py  skill_requirements.py  skills.py  solver_config.py  staff.py  staffing_requirements.py
backend/backend/optimizer/: solver.py
backend/backend/repositories/: __init__.py  role_staffing_requirement.py  schedule.py  shift_slot.py  skill.py  solver_config.py  staff.py  staff_request.py  staffing_requirement.py
backend/backend/services/: __init__.py  request.py  schedule.py
backend/tests/: conftest.py  test_api_optimize.py  test_api_requests.py  test_api_role_staffing.py  test_api_schedules.py  test_api_shift_slots.py  test_api_skills.py  test_api_solver_config.py  test_api_staff.py  test_api_staffing_requirements.py  test_models.py  test_optimizer.py
docs/: technical-guide.md  usage-guide.md
docs/plans/: 2026-02-09-shift-scheduling-design.md  2026-02-09-shift-scheduling-implementation.md  2026-02-26-staff-view-and-crossmonth-consecutive.md  2026-02-26-staff-view-crossmonth-plan.md  (+2 more)
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx
(+30 files in other folders)
